ticker extraction done. need to aggregate

--- a/tools/adhoc.ipynb
+++ b/tools/adhoc.ipynb
@@ -15,8 +15,12 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "display_name": "Python 3.7.3 64-bit ('testdev')",
+   "metadata": {
+    "interpreter": {
+     "hash": "f7b3623273f49a87cab5a4debf083204252a7af5283a051b2fe1688ef4da9bdf"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -24,27 +28,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from IPython.display import display, HTML\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "notebook_path = os.path.abspath(\"adhoc.ipynb\")\n",
+    "notebook_dir = str(os.path.dirname(notebook_path)).replace(\"\\\\\\\\\", \"/\").replace(\"\\\\\", \"/\")\n",
+    "output_folder = f\"{notebook_dir}/../output\"\n",
+    "raw_output = f\"{output_folder}/raw\"\n",
+    "curated_output = f\"{output_folder}/curated\"\n",
+    "semantic_output = f\"{output_folder}/semantic\"\n",
+    "\n",
+    "nyse_tickers = f\"{notebook_dir}/../wsb/nyse-listed.csv\"\n",
+    "nasdaq_tickers = f\"{notebook_dir}/../wsb/nasdaq-listed.csv\"\n",
+    "curated_stockticker = f\"{curated_output}/StockTicker.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Testing simple count\n",
-      "100\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                  int64\n",
+       "id                         object\n",
+       "title                      object\n",
+       "name                       object\n",
+       "upvote_ratio              float64\n",
+       "ups                         int64\n",
+       "score                       int64\n",
+       "sort                       object\n",
+       "created                    object\n",
+       "author                     object\n",
+       "num_comments                int64\n",
+       "flair                      object\n",
+       "permalink                  object\n",
+       "built_url                  object\n",
+       "url                        object\n",
+       "submission_text            object\n",
+       "last_updated               object\n",
+       "raw_filename               object\n",
+       "model                      object\n",
+       "title_regex                object\n",
+       "title_ticker               object\n",
+       "submission_text_regex      object\n",
+       "submission_text_ticker     object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 87
     }
    ],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession\\\n",
-    ".builder\\\n",
-    ".getOrCreate()\n",
+    "# pd.set_option('display.max_colwidth', None)\n",
+    "sep = \"|\"\n",
+    "df = pd.read_csv(curated_stockticker, sep=sep)\n",
     "\n",
-    "print(\"Testing simple count\")\n",
-    "# The Spark code will execute on the Databricks cluster.\n",
-    "print(spark.range(100).count())"
+    "df.dtypes\n",
+    "# display(df)\n",
+    "# display(df.iloc[[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                                         title  \\\n",
+       "36  AMD figures today. 100k yolo. Let’s go!🚀🚀🚀   \n",
+       "\n",
+       "                                                                                       built_url  \\\n",
+       "36  https://www.reddit.com/r/wallstreetbets/comments/l5gsp8/amd_figures_today_100k_yolo_lets_go/   \n",
+       "\n",
+       "   title_ticker submission_text_ticker  \n",
+       "36           []                     []  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>built_url</th>\n      <th>title_ticker</th>\n      <th>submission_text_ticker</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>36</th>\n      <td>AMD figures today. 100k yolo. Let’s go!🚀🚀🚀</td>\n      <td>https://www.reddit.com/r/wallstreetbets/comments/l5gsp8/amd_figures_today_100k_yolo_lets_go/</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 88
+    }
+   ],
+   "source": [
+    "df[df['id'].str.contains(\"l5gsp8\")][[\"title\",\"built_url\",\"title_ticker\", \"submission_text_ticker\"]]\n"
    ]
   },
   {
